vlib/v/checker/tests/const_expr_match_range_invalid_err.vv
const start = 1

const end = 20

match 5 {
	start...`1` {
		println(start)
	}
	'str'...end {
		println(end)
	}
	else {}
}
